--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Three.js Solar System</title>
+		<title>Shift Escape Three.js</title>
 		<style>canvas { width: 100%; height: 100% }</style>
 	</head>
 	<body>
@@ -9,5 +9,8 @@
         <script src="JS/jquery-1.8.3.min.js"></script>
         <script src="JS/underscore-min.js"></script>
 		<script src="shiftEscape.js"></script>
+        
+        <p> Help the robot escape! Move with the WASD keys, and move the cursor with the arrow keys.
+            Press space to shift rows horizontally, and enter to shift rows vertically. <p>
 	</body>
 </html>
