--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         <script src="JS/underscore-min.js"></script>
 		<script src="shiftEscape.js"></script>
         
-        <p> Help the robot escape! Move with the WASD keys, and move the cursor with the arrow keys.
-            Press space to shift rows horizontally, and enter to shift rows vertically. <p>
+        <p> Help the robot escape! Move with the WASD keys, and move the cursor with the arrow keys. Shift rows and columns by holding shift, followed by the direction to shift a row or column. <p>
 	</body>
 </html>
